<resources>
    <string name="app_name">wispace</string>
    <string name="account">アカウントの作成</string>
    <string name="username">ユーザー名</string>
    <string name="mailaddress">メールアドレス</string>
    <string name="password">パスワード</string>
    <string name="checkbox">利用規約とプライバシーポリシーに同意する</string>
    <string name="register">新規登録</string>
    <string name="lonin">ログイン</string>
    
    <string-array name="list">
        <item>選択してください</item>
        <item>勉強</item>
        <item>プログラミング</item>
        <item>数学</item>
    </string-array>
</resources>