<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBE5D6"
    tools:context=".Login">

    <Button
        android:id="@+id/register_bt"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textColor="#000000"
        android:background="@android:color/transparent"
        android:text = "@string/register"
        android:textSize="25sp"
        android:onClick="register"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/lonin_bt"/>


    <TextView
        android:id="@+id/lonin_bt"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textColor="#000000"
        android:gravity="center"
        android:text = "@string/lonin"
        android:textSize="25sp"
        android:background="@drawable/border"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/register_bt"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:id="@+id/line_horizontal_center"
        app:layout_constraintTop_toBottomOf="@+id/register_bt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/account_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lonin"
        android:textSize="40sp"
        android:layout_marginLeft="24dp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/register_bt"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/partsdesign"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/mailaddress"
        android:gravity="center"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/account_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/partsdesign"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/password"
        android:gravity="center"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:background="@drawable/login_login_bt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>